--- a/IsTakipSistemi/Views/Shared/_LayoutYonetici.cshtml
+++ b/IsTakipSistemi/Views/Shared/_LayoutYonetici.cshtml
@@ -34,6 +34,10 @@
                         </li>
                        
                     </ul>
+                    <div class="d-flex nav-item">
+                        @Html.ActionLink("Çıkış", "Index", "Logout", new {}, new {@class="btn btn-danger"})
+
+                    </div>
                    
                     
                 </div>
