--- a/IsTakipSistemi/Views/Yonetici/Takip.cshtml
+++ b/IsTakipSistemi/Views/Yonetici/Takip.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container mt-5">
     <div class=" mb-3">
-        <h3>@ViewBag Birimi için Çalışan İşlerini Listeleme</h3>
+        <h3>@ViewBag.birimAd Birimi için Çalışan İşlerini Listeleme</h3>
     </div>
     @using (Html.BeginForm("Takip", "Yonetici", FormMethod.Post))
     {
